--- a/apps/site/src/app.html
+++ b/apps/site/src/app.html
@@ -5,6 +5,8 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!-- Preload critical background image for Home section -->
+		<link rel="preload" as="image" href="/photos/houston-night.webp" fetchpriority="high" />
 		%sveltekit.head%
 	</head>
 
