--- a/apps/site/src/app.html
+++ b/apps/site/src/app.html
@@ -4,9 +4,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!-- Preload critical background image for Home section -->
-		<link rel="preload" as="image" href="/photos/houston-night.webp" fetchpriority="high" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 		%sveltekit.head%
 	</head>
 
